// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Job v2 actions/reducer should enqueueJob 1`] = `
Object {
  "active": Set {
    "c104a6cd55b060a801b2c838e8a7bf40",
  },
  "done": Map {},
  "stale": Map {
    "c104a6cd55b060a801b2c838e8a7bf40" => Object {
      "job": Object {
        "args": Object {},
        "contentDigest": "c104a6cd55b060a801b2c838e8a7bf40",
        "id": "1234",
        "inputPaths": Array [],
        "name": "TEST_JOB",
        "outputDir": "public/static",
        "plugin": Object {
          "isLocal": false,
          "name": "test-plugin",
          "resolve": "/node_modules/test-plugin",
          "version": "1.0.0",
        },
      },
      "plugin": Object {
        "name": "test-plugin",
        "resolve": "/node_modules/test-plugin",
        "version": "1.0.0",
      },
    },
  },
}
`;

exports[`Job v2 actions/reducer should enqueueJob 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {},
        "contentDigest": "c104a6cd55b060a801b2c838e8a7bf40",
        "id": "1234",
        "inputPaths": Array [],
        "name": "TEST_JOB",
        "outputDir": "public/static",
        "plugin": Object {
          "isLocal": false,
          "name": "test-plugin",
          "resolve": "/node_modules/test-plugin",
          "version": "1.0.0",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
